--- a/İndex.html
+++ b/İndex.html
@@ -1,172 +1,356 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bir Sorum Var 💖</title>
-
-<style>
-    * { box-sizing: border-box; }
-
-    body {
-        margin: 0;
-        height: 100vh;
-        background: linear-gradient(135deg, #ff4e8a, #ff9a9e);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: 'Segoe UI', sans-serif;
-        overflow: hidden;
-        color: #fff;
-    }
-
-    .card {
-        background: rgba(255,255,255,0.15);
-        backdrop-filter: blur(12px);
-        border-radius: 24px;
-        padding: 35px;
-        text-align: center;
-        box-shadow: 0 25px 50px rgba(0,0,0,0.3);
-        max-width: 340px;
-        width: 90%;
-        z-index: 2;
-    }
-
-    h1 {
-        font-size: 28px;
-        margin-bottom: 10px;
-    }
-
-    p {
-        font-size: 17px;
-        margin-bottom: 25px;
-    }
-
-    button {
-        padding: 14px 26px;
-        font-size: 16px;
-        border: none;
-        border-radius: 30px;
-        cursor: pointer;
-        transition: 0.3s;
-    }
-
-    #yes {
-        background: #fff;
-        color: #ff3f7f;
-        font-weight: bold;
-        box-shadow: 0 10px 20px rgba(255,255,255,0.4);
-    }
-
-    #yes:hover {
-        transform: scale(1.12);
-    }
-
-    #no {
-        background: transparent;
-        border: 2px solid #fff;
-        color: #fff;
-        position: absolute;
-        z-index: 3;
-    }
-
-    .heart {
-        position: absolute;
-        font-size: 22px;
-        animation: float 4s linear infinite;
-        opacity: 0.9;
-    }
-
-    @keyframes float {
-        from {
-            transform: translateY(0) scale(1);
-            opacity: 1;
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zehra | Aşkın Sonsuzluğu</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat:wght@200;400;700&family=Great+Vibes&display=swap" rel="stylesheet">
+    
+    <style>
+        :root {
+            --primary: #ff4d6d;
+            --secondary: #ff8fa3;
+            --dark-red: #800f2f;
+            --gold: #ffb703;
+            --glass: rgba(255, 255, 255, 0.15);
         }
-        to {
-            transform: translateY(-900px) scale(1.6);
-            opacity: 0;
-        }
-    }
 
-    .message {
-        margin-top: 15px;
-        font-size: 14px;
-        opacity: 0.9;
-    }
-</style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            cursor: none; 
+        }
+
+        body {
+            background: #000;
+            color: #fff;
+            font-family: 'Montserrat', sans-serif;
+            overflow-x: hidden;
+            scroll-behavior: smooth; /* Yumuşak kaydırma için kritik satır */
+        }
+
+        #cursor {
+            position: fixed;
+            width: 20px;
+            height: 20px;
+            background: var(--primary);
+            border-radius: 50%;
+            pointer-events: none;
+            z-index: 9999;
+            box-shadow: 0 0 20px var(--primary);
+            transition: transform 0.1s ease;
+        }
+
+        #bg-canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
+
+        header {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            background: radial-gradient(circle, rgba(255,77,109,0.2) 0%, transparent 70%);
+        }
+
+        .hero-title {
+            font-family: 'Great Vibes', cursive;
+            font-size: 8rem;
+            color: white;
+            text-shadow: 0 0 30px rgba(255,77,109,0.8);
+            animation: floating 3s ease-in-out infinite;
+        }
+
+        .hero-subtitle {
+            font-size: 1.5rem;
+            letter-spacing: 5px;
+            text-transform: uppercase;
+            opacity: 0.8;
+            margin-top: -20px;
+        }
+
+        /* ----------------------------------------------------------------
+           HEDEF BÖLÜM (ID: ozellikler)
+        ------------------------------------------------------------------- */
+        .section-love {
+            padding: 150px 20px; /* Biraz boşluk ekledik */
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 40px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .love-card {
+            background: var(--glass);
+            backdrop-filter: blur(15px);
+            padding: 40px;
+            border-radius: 20px;
+            border: 1px solid rgba(255,255,255,0.2);
+            text-align: center;
+            transition: 0.5s;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .love-card:hover {
+            transform: translateY(-20px) scale(1.05);
+            background: rgba(255,77,109,0.2);
+            box-shadow: 0 10px 40px rgba(255,77,109,0.4);
+        }
+
+        .love-card i {
+            font-size: 3rem;
+            color: var(--primary);
+            display: block;
+            margin-bottom: 20px;
+            animation: pulse 2s infinite;
+        }
+
+        .marquee {
+            background: var(--primary);
+            padding: 20px 0;
+            overflow: hidden;
+            white-space: nowrap;
+            transform: rotate(-2deg);
+            width: 110%;
+            margin-left: -5%;
+            margin-top: 100px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+        }
+
+        .marquee span {
+            font-size: 2rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            display: inline-block;
+            animation: marquee-anim 20s linear infinite;
+        }
+
+        @keyframes marquee-anim {
+            0% { transform: translateX(100%); }
+            100% { transform: translateX(-100%); }
+        }
+
+        .message-box {
+            height: 60vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            perspective: 1000px;
+        }
+
+        .love-letter {
+            width: 400px;
+            height: 250px;
+            background: #fff;
+            color: #333;
+            padding: 30px;
+            border-radius: 10px;
+            transform: rotateX(20deg);
+            box-shadow: 20px 20px 60px rgba(0,0,0,0.5);
+            transition: 1s;
+            cursor: pointer;
+        }
+
+        @keyframes floating {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-30px); }
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); opacity: 1; }
+            50% { transform: scale(1.3); opacity: 0.7; }
+            100% { transform: scale(1); opacity: 1; }
+        }
+
+        footer {
+            padding: 50px;
+            text-align: center;
+            background: #050505;
+            border-top: 1px solid var(--primary);
+        }
+
+        .glow-btn {
+            padding: 15px 40px;
+            border: 2px solid var(--primary);
+            background: transparent;
+            color: white;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+            font-weight: bold;
+            transition: 0.5s;
+            border-radius: 50px;
+            cursor: pointer;
+        }
+
+        .glow-btn:hover {
+            background: var(--primary);
+            box-shadow: 0 0 40px var(--primary);
+            transform: scale(1.1);
+        }
+
+        .scroll-hint {
+            margin-top: 15px;
+            font-size: 0.9rem;
+            opacity: 0.6;
+            animation: pulse 2s infinite;
+        }
+    </style>
 </head>
-
 <body>
 
-<div class="card">
-    <h1> pistt fatmaa</h1>
-    <p>Benimle çıkar mısın?</p>
-    <button id="yes">Evet 💕</button>
-    <div class="message" id="msg"></div>
-</div>
+    <div id="cursor"></div>
+    <canvas id="bg-canvas"></canvas>
 
-<button id="no">Hayır 🙃</button>
+    <header>
+        <p class="hero-subtitle">Rüzgardan hediye</p>
+        <h1 class="hero-title">Zehranur</h1>
+        <div style="margin-top: 20px;">
+            <button class="glow-btn" onclick="sayfayiKaydir()">Buraya bassana guzellik</button>
+            <p class="scroll-hint">Ruzgarin hediyesi için dokun</p>
+        </div>
+    </header>
 
-<script>
-    const noBtn = document.getElementById("no");
-    const yesBtn = document.getElementById("yes");
-    const msg = document.getElementById("msg");
+    <div class="marquee">
+        <span>ZEHRA SENİ ÇOK SEVİYORUM • SONSUZA DEK • AŞKIN EN GÜZEL HALİ • ZEHRA • ZEHRA • </span>
+    </div>
 
-    let kacis = 0;
+    <section class="section-love" id="ozellikler">
+        <div class="love-card">
+            <i>❤</i>
+            <h3>Zarafet</h3>
+            <p>Bir bakışınla dünyayı aydınlatan, her adımında zarafeti temsil eden eşsiz bir ruh.</p>
+        </div>
+        <div class="love-card">
+            <i>💖</i>
+            <h3>Tutku</h3>
+            <p>Her saniye artan, kalbin derinliklerinde yankılanan bitmek bilmeyen bir hikaye.</p>
+        </div>
+        <div class="love-card">
+            <i>💍</i>
+            <h3>Sadakat</h3>
+            <p>Zamanın ötesinde, her mevsimde seninle yeniden doğan bir yemin gibi.</p>
+        </div>
+        <div class="love-card">
+            <i>✨</i>
+            <h3>Işıltı</h3>
+            <p>Gecenin en karanlık anında bile yolunu bulan o büyülü parıltı, sadece sende.</p>
+        </div>
+    </section>
 
-    const mesajlar = [
-        "😏 Emin misin?",
-        "😌 Bir daha düşün bence",
-        "😳 Merti mi kiracan",
-        "🥺 Kalbim kırılıyor bak",
-        "💘 Tamam tamam… ama seni seviyorum"
-    ];
+    <section class="message-box">
+        <div class="love-letter">
+            <h2 style="font-family: 'Dancing Script'; margin-bottom: 15px;">Ruzgardan Zehraya not;</h2>
+            <p>kalbim seninle atiyo, seni çok seviyorum Zehranurum</p>
+        </div>
+    </section>
 
-    noBtn.style.top = "70%";
-    noBtn.style.left = "50%";
+    <footer>
+        <p>© 2026 Ruzgar tarafindan yapildi</p>
+    </footer>
 
-    noBtn.addEventListener("click", () => {
-        kacis++;
-
-        const x = Math.random() * (window.innerWidth - 120);
-        const y = Math.random() * (window.innerHeight - 60);
-
-        noBtn.style.left = x + "px";
-        noBtn.style.top = y + "px";
-
-        msg.textContent = mesajlar[Math.min(kacis - 1, mesajlar.length - 1)];
-
-        if (kacis >= 5) {
-            noBtn.style.display = "none";
-            kalpYagmuru(40);
-            msg.textContent = "💖 Sanırım cevap belli 😍";
+    <script>
+        // Sayfayı kaydırma ve kalp ekleme fonksiyonu
+        function sayfayiKaydir() {
+            // 1. Kalp yağmurunu tetikle
+            addHeart();
+            
+            // 2. Hedef bölüme (ozellikler) yumuşak geçiş yap
+            const hedef = document.getElementById('ozellikler');
+            hedef.scrollIntoView({ behavior: 'smooth' });
         }
-    });
 
-    yesBtn.addEventListener("click", () => {
-        document.body.innerHTML = `
-            <h1 style="font-size:42px;text-align:center;">
-                💖 YAAA EVET 💖<br>
-                Dünyanın en güzel kararı 😍
-            </h1>
-        `;
-        kalpYagmuru(60);
-    });
+        // Mouse Takip Sistemi
+        const cursor = document.getElementById('cursor');
+        document.addEventListener('mousemove', (e) => {
+            cursor.style.left = e.clientX + 'px';
+            cursor.style.top = e.clientY + 'px';
+            if (Math.random() > 0.9) createSparkle(e.clientX, e.clientY);
+        });
 
-    function kalpYagmuru(adet) {
-        for (let i = 0; i < adet; i++) {
-            const heart = document.createElement("div");
-            heart.className = "heart";
-            heart.innerHTML = "💖";
-            heart.style.left = Math.random() * window.innerWidth + "px";
-            heart.style.bottom = "-20px";
-            heart.style.animationDuration = (Math.random() * 3 + 2) + "s";
-            document.body.appendChild(heart);
-
-            setTimeout(() => heart.remove(), 5000);
+        function createSparkle(x, y) {
+            const sparkle = document.createElement('div');
+            sparkle.innerHTML = '❤';
+            sparkle.style.position = 'fixed';
+            sparkle.style.left = x + 'px';
+            sparkle.style.top = y + 'px';
+            sparkle.style.color = '#ff4d6d';
+            sparkle.style.pointerEvents = 'none';
+            sparkle.style.fontSize = Math.random() * 20 + 10 + 'px';
+            sparkle.style.zIndex = '9998';
+            document.body.appendChild(sparkle);
+            const anim = sparkle.animate([
+                { transform: 'translate(0, 0) scale(1)', opacity: 1 },
+                { transform: `translate(${Math.random()*100-50}px, ${Math.random()*100-50}px) scale(0)`, opacity: 0 }
+            ], { duration: 1000 });
+            anim.onfinish = () => sparkle.remove();
         }
-    }
-</script>
 
+        // Canvas Kalp Yağmuru
+        const canvas = document.getElementById('bg-canvas');
+        const ctx = canvas.getContext('2d');
+        let hearts = [];
+        function resize() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
+        window.addEventListener('resize', resize);
+        resize();
+
+        class Heart {
+            constructor() {
+                this.x = Math.random() * canvas.width;
+                this.y = Math.random() * canvas.height;
+                this.size = Math.random() * 15 + 5;
+                this.speed = Math.random() * 2 + 1;
+                this.opacity = Math.random() * 0.5 + 0.2;
+            }
+            draw() {
+                ctx.globalAlpha = this.opacity;
+                ctx.fillStyle = '#ff4d6d';
+                ctx.beginPath();
+                ctx.moveTo(this.x, this.y);
+                ctx.bezierCurveTo(this.x + this.size/2, this.y - this.size/2, this.x + this.size, this.y + this.size/3, this.x, this.y + this.size);
+                ctx.bezierCurveTo(this.x - this.size, this.y + this.size/3, this.x - this.size/2, this.y - this.size/2, this.x, this.y);
+                ctx.fill();
+            }
+            update() {
+                this.y -= this.speed;
+                if (this.y < -20) { this.y = canvas.height + 20; this.x = Math.random() * canvas.width; }
+            }
+        }
+
+        for (let i = 0; i < 50; i++) hearts.push(new Heart());
+        function animate() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            hearts.forEach(h => { h.update(); h.draw(); });
+            requestAnimationFrame(animate);
+        }
+        animate();
+
+        function addHeart() {
+            for(let i=0; i<15; i++) hearts.push(new Heart());
+        }
+
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if(entry.isIntersecting) {
+                    entry.target.style.opacity = 1;
+                    entry.target.style.transform = 'translateY(0)';
+                }
+            });
+        });
+
+        document.querySelectorAll('.love-card').forEach(card => {
+            card.style.opacity = 0;
+            card.style.transform = 'translateY(50px)';
+            card.style.transition = '1s';
+            observer.observe(card);
+        });
+    </script>
 </body>
-</html>
+   </html>
